--- a/public/stylesheets/picon.css
+++ b/public/stylesheets/picon.css
@@ -112,7 +112,7 @@
 .picon .stacked-image .button-bar .buttons .delete-button{
     position:relative;
     background: url(/images/album_toolbar_delete.png) no-repeat scroll 0px 0px transparent;
-    top:1px;
+    top:0px;
     width:20px;
     height:18px;
     float:left;
